# hackathon-todo

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  PHASE_III.md  PHASE_IV.md  PROJECT_DETAIL.md  README.md  docker-compose.yml  phase4-deployment-guide.md  pyproject.toml
.claude/: settings.local.json
backend/: mypy.ini  (+10 more)
phase-1-todo-console/: README.md  main.py  pyproject.toml
phase-1-todo-console/src/: __init__.py  __main__.py  app.py  interactive.py
phase-1-todo-console/src/models/: __init__.py  enums.py  task.py
phase-1-todo-console/src/services/: __init__.py  exceptions.py  task_service.py
phase-1-todo-console/src/storage/: __init__.py  in_memory.py  repository.py
phase-1-todo-console/src/ui/: __init__.py  renderer.py
phase-1-todo-console/tests/: __init__.py  conftest.py
phase-1-todo-console/tests/integration/: test_cli.py
phase-1-todo-console/tests/unit/: test_enums.py  test_in_memory_repo.py  test_renderer.py  test_task.py  test_task_service.py
phase-3-todo-ai-chatbot/backend/: .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  chat_sessions.db-shm  chat_sessions.db-wal  mypy.ini  pyproject.toml  run_auth_tests.sh
phase-3-todo-ai-chatbot/backend/alembic/: env.py  script.py.mako
phase-3-todo-ai-chatbot/backend/alembic/versions/: 002_add_chat_tables.py  003_fix_messages_schema.py  05f28ccbd23b_add_recurrence_fields.py  407432637c3c_add_expires_at_to_messages_table.py  4f08431bc002_add_chatkit_item_id_to_message_model_.py  a1b2c3d4e5f6_add_is_pattern_field_for_recurring.py  c8748918d4f7_add_missing_chatkit_fields.py  d4af4205900c_add_priority_due_date_and_tags_support.py
phase-3-todo-ai-chatbot/backend/mcp_server/: __init__.py  __main__.py  tools.py
phase-3-todo-ai-chatbot/backend/src/: __init__.py  config.py  main.py
phase-3-todo-ai-chatbot/backend/src/agent_config/: __init__.py  factory.py  todo_agent.py  todo_agent_improved.py
phase-3-todo-ai-chatbot/backend/src/api/: __init__.py
phase-3-todo-ai-chatbot/backend/src/auth/: __init__.py  jwt.py
phase-3-todo-ai-chatbot/backend/src/db/: __init__.py  async_session.py  engine.py  session.py
phase-3-todo-ai-chatbot/backend/src/models/: __init__.py  base.py  conversation.py  message.py  task.py  task_tag.py
phase-3-todo-ai-chatbot/backend/src/schemas/: __init__.py  task.py
phase-3-todo-ai-chatbot/backend/src/services/: __init__.py  analytics_service.py  chat_service.py  chatkit_server.py  chatkit_store.py  conversation_service.py  recurring_service.py  tag_service.py  task_service.py
phase-3-todo-ai-chatbot/backend/src/tasks/: __init__.py  cleanup_old_instances.py  message_cleanup.py
phase-3-todo-ai-chatbot/backend/tests/: PRIORITY_DETECTION_TESTS.md  README.md  SUMMARY.md  __init__.py  conftest.py  test_mcp.py  test_phase3_chatkit.py
phase-3-todo-ai-chatbot/backend/tests/debugging/: test_agent_mcp.py  test_database_connection.py  test_mcp_import.py  test_mcp_integration.py  test_mcp_stdio.py  test_message_query.py  test_minimal_mcp.py
phase-3-todo-ai-chatbot/backend/tests/integration/: __init__.py  test_agent_behavior.py  test_auth.py  test_chat_endpoint.py  test_conversation_persistence.py  test_edge_cases_char_limit.py  test_edge_cases_queueing.py  test_edge_cases_timeout.py  test_recurring_tasks.py  test_retention_cleanup.py  test_task_create.py  test_task_filter.py
(+880 files in other folders)
